; ModuleID = '/home/carl/AnghaBench/nanomsg/src/core/extr_sock.c_nn_sock_setopt.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/core/extr_sock.c_nn_sock_setopt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_sock = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_sock_setopt(%struct.nn_sock* %0, i32 %1, i32 %2, i8* %3, i64 %4) #0 {
  %6 = alloca %struct.nn_sock*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store %struct.nn_sock* %0, %struct.nn_sock** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i64 %4, i64* %10, align 8
  %12 = load %struct.nn_sock*, %struct.nn_sock** %6, align 8
  %13 = getelementptr inbounds %struct.nn_sock, %struct.nn_sock* %12, i32 0, i32 0
  %14 = call i32 @nn_ctx_enter(i32* %13)
  %15 = load %struct.nn_sock*, %struct.nn_sock** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load i8*, i8** %9, align 8
  %19 = load i64, i64* %10, align 8
  %20 = call i32 @nn_sock_setopt_inner(%struct.nn_sock* %15, i32 %16, i32 %17, i8* %18, i64 %19)
  store i32 %20, i32* %11, align 4
  %21 = load %struct.nn_sock*, %struct.nn_sock** %6, align 8
  %22 = getelementptr inbounds %struct.nn_sock, %struct.nn_sock* %21, i32 0, i32 0
  %23 = call i32 @nn_ctx_leave(i32* %22)
  %24 = load i32, i32* %11, align 4
  ret i32 %24
}

declare dso_local i32 @nn_ctx_enter(i32*) #1

declare dso_local i32 @nn_sock_setopt_inner(%struct.nn_sock*, i32, i32, i8*, i64) #1

declare dso_local i32 @nn_ctx_leave(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
